Security completed